--- a/.github/workflows/update-thm-badge.yml
+++ b/.github/workflows/update-thm-badge.yml
@@ -1,8 +1,9 @@
-name: Update TryHackMe Badge
+name: Update TryHackMe Custom Badge
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs daily at midnight UTC
-  workflow_dispatch: # Allows manual run
+    - cron: "0 0 * * *" # daily at midnight UTC
+  workflow_dispatch:
+
 jobs:
   update-badge:
     runs-on: ubuntu-latest
@@ -10,14 +11,30 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Update badge date
+      - name: Install dependencies
         run: |
-          TODAY=$(date +%F)
-          sed -i "s/date=[0-9-]*/date=$TODAY/" README.md
+          sudo apt-get update
+          sudo apt-get install -y jq curl imagemagick
+
+      - name: Fetch TryHackMe stats
+        run: |
+          curl -s "https://tryhackme.com/api/v2/public-profile?userPublicId=lily442" \
+          | jq -r '"Points: \(.points)\nRank: \(.rank)\nRooms Completed: \(.roomsCompleted)"' \
+          > stats.txt
+
+      - name: Create badge image
+        run: |
+          convert -size 400x100 xc:none -gravity center \
+            -pointsize 18 -fill white -undercolor '#2E3440' \
+            -annotate +0+0 "$(cat stats.txt)" badge.png
+
+      - name: Move badge
+        run: mv badge.png tryhackme-badge.png
 
       - name: Commit changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git commit -am "Auto-update TryHackMe badge date"
+          git add tryhackme-badge.png
+          git commit -m "Update TryHackMe custom badge" || echo "No changes"
           git push
