--- a/.github/workflows/update-thm.yml
+++ b/.github/workflows/update-thm.yml
@@ -2,8 +2,8 @@ name: Update TryHackMe Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *" # every day at midnight UTC
-  workflow_dispatch: # allow manual run
+    - cron: "0 0 * * *" # Run daily at midnight UTC
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
   update-thm:
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Install jq
+        run: sudo apt-get install -y jq
 
       - name: Fetch TryHackMe stats
         run: |
@@ -26,11 +29,17 @@ jobs:
           echo "### TryHackMe Profile" > thm-stats.md
           echo "[![TryHackMe Badges](https://tryhackme-badges.s3.amazonaws.com/${USERNAME}.png)](https://tryhackme.com/p/${USERNAME})" >> thm-stats.md
           echo "" >> thm-stats.md
+          echo "🔗 [View my TryHackMe Profile](https://tryhackme.com/p/${USERNAME})" >> thm-stats.md
+          echo "" >> thm-stats.md
           echo "![Level](https://img.shields.io/badge/Level-$LEVEL-blue) ![Rank](https://img.shields.io/badge/Rank-$RANK-green) ![Rooms Completed](https://img.shields.io/badge/Rooms%20Completed-$ROOMS-yellow)" >> thm-stats.md
 
       - name: Update README with new stats
         run: |
-          sed -i '/<!-- THM-STATS:START -->/,/<!-- THM-STATS:END -->/c\<!-- THM-STATS:START -->\n'"$(cat thm-stats.md)"'\n<!-- THM-STATS:END -->' README.md
+          if grep -q '<!-- THM-STATS:START -->' README.md; then
+            sed -i '/<!-- THM-STATS:START -->/,/<!-- THM-STATS:END -->/c\<!-- THM-STATS:START -->\n'"$(cat thm-stats.md)"'\n<!-- THM-STATS:END -->' README.md
+          else
+            echo -e "\n<!-- THM-STATS:START -->\n$(cat thm-stats.md)\n<!-- THM-STATS:END -->" >> README.md
+          fi
 
       - name: Commit changes
         run: |
