--- a/.github/workflows/update-thm.yml
+++ b/.github/workflows/update-thm.yml
@@ -1,58 +1,45 @@
 name: Update TryHackMe Stats
 
 on:
+  workflow_dispatch: # Manual trigger from GitHub UI
   schedule:
-    - cron: "0 0 * * *" # Runs every day at midnight UTC
-  workflow_dispatch: # Allow manual run from GitHub Actions tab
+    - cron: "0 * * * *" # Every hour
+  push:
+    branches:
+      - main
 
 jobs:
-  update-thm-stats:
+  update-stats:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install jq
-        run: sudo apt-get install jq -y
-
-      - name: Fetch TryHackMe stats
+      - name: Fetch TryHackMe Stats
         run: |
-          USERNAME="lily442"
-          API="https://tryhackme.com/api/v2/public-profile?username=${USERNAME}"
-          echo "Fetching TryHackMe stats for $USERNAME"
-          JSON=$(curl -s "$API")
+          echo "Fetching: https://tryhackme.com/api/v2/public-profile?username=lily442"
+          RESPONSE=$(curl -s "https://tryhackme.com/api/v2/public-profile?username=lily442")
+          echo "=== RAW JSON RESPONSE ==="
+          echo "$RESPONSE"
+          POINTS=$(echo "$RESPONSE" | jq '.data.points // "N/A"')
+          RANK=$(echo "$RESPONSE" | jq '.data.rank // "N/A"')
+          ROOMS=$(echo "$RESPONSE" | jq '.data.completedRoomsNumber // "N/A"')
 
-          LEVEL=$(echo "$JSON" | jq -r '.data.level // "N/A"')
-          RANK=$(echo "$JSON" | jq -r '.data.rank // "N/A"')
-          ROOMS=$(echo "$JSON" | jq -r '.data.completedRoomsNumber // "N/A"')
+          echo "Points: $POINTS | Rank: $RANK | Rooms: $ROOMS" > thm-stats.md
 
-          {
-            echo "[![TryHackMe Badges](https://tryhackme-badges.s3.amazonaws.com/${USERNAME}.png)](https://tryhackme.com/p/${USERNAME})"
-            echo
-            echo "🔗 [View my TryHackMe Profile](https://tryhackme.com/p/${USERNAME})"
-            echo
-            echo "![Level](https://img.shields.io/badge/Level-${LEVEL}-blue) ![Rank](https://img.shields.io/badge/Rank-${RANK}-green) ![Rooms Completed](https://img.shields.io/badge/Rooms%20Completed-${ROOMS}-yellow)"
-          } > thm-stats.md
-
-      - name: Update README with new stats
+      - name: Update README.md
         run: |
-          if grep -q '<!-- THM-STATS:START -->' README.md; then
-            CONTENT=$(sed 's/[&/\]/\\&/g' thm-stats.md)
-            sed -i "/<!-- THM-STATS:START -->/,/<!-- THM-STATS:END -->/c<!-- THM-STATS:START -->\n$CONTENT\n<!-- THM-STATS:END -->" README.md
+          if grep -q "<!-- THM-STATS:START -->" README.md; then
+            sed -i "/<!-- THM-STATS:START -->/,/<!-- THM-STATS:END -->/c\\<!-- THM-STATS:START -->\n$(cat thm-stats.md)\n<!-- THM-STATS:END -->" README.md
           else
-            cat >> README.md <<EOL
-
-<!-- THM-STATS:START -->
-$(cat thm-stats.md)
-<!-- THM-STATS:END -->
-EOL
+            echo -e "\n<!-- THM-STATS:START -->\n$(cat thm-stats.md)\n<!-- THM-STATS:END -->" >> README.md
           fi
 
       - name: Commit changes
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git add README.md
           git commit -m "Update TryHackMe stats" || echo "No changes to commit"
           git push
