--- a/.github/workflows/update-thm.yml
+++ b/.github/workflows/update-thm.yml
@@ -1,29 +1,32 @@
-name: Update TryHackMe Stats
+name: Update TryHackMe Badge
 
 on:
   schedule:
-    - cron: "0 */12 * * *" # Runs every 12 hours
-  workflow_dispatch:
+    - cron: "0 0 * * 0" # Runs every Sunday at midnight
+  workflow_dispatch: # Allows manual trigger
 
 jobs:
-  update-tryhackme-stats:
+  update-badge:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Fetch TryHackMe stats
+      - name: Download TryHackMe Badge
         run: |
-          curl -s "https://tryhackme-badges.s3.amazonaws.com/lily442.png" -o tryhackme.png
+          curl -o tryhackme-badge.png "https://tryhackme-badges.s3.amazonaws.com/lily442.png"
 
-      - name: Create styled badge
+      - name: Add badge border styling
         run: |
-          convert tryhackme.png -resize 300x300 -bordercolor "#4CAF50" -border 10 styled-tryhackme.png
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+          convert tryhackme-badge.png -bordercolor "#ff4d6d" -border 10x10 tryhackme-badge.png
 
-      - name: Commit and push updated stats
+      - name: Commit and push updated badge
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add styled-tryhackme.png
-          git commit -m "Update TryHackMe Stats"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add tryhackme-badge.png
+          git commit -m "Updated TryHackMe badge" || echo "No changes to commit"
           git push
